I add in home_page main.css

--- a/my_site/templates/my_site/home_page.html
+++ b/my_site/templates/my_site/home_page.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
-{%for post in info%}
-<h1>{{post.content}}</h1>
-<h2>Hi, my name is {{post.name}}</h2>
-<p></p>
+{%extends 'my_site/base.html'%}
+{%block content%}
+    <h1>Home Page</h1>
+{%endblock content%}
 
 
-</body>
-{%endfor%}
-</html>
+
+
+
+
+
+
+
+
