--- a/my_site/templates/my_site/home_page.html
+++ b/my_site/templates/my_site/home_page.html
@@ -1,6 +1,15 @@
 {%extends 'my_site/base.html'%}
 {%block content%}
-    <h1>Home Page</h1>
+{%for post in info%}
+<article class="media content-section">
+    <div class="media-body">
+    <div class="article-metadata">
+      <a class="mr-2" href="#"></a>
+    <h2><a class="article-title">{{post.name}}</a></h2>
+        <p>{{post.content}}</p>
+    <small class="text-muted"> 03.12.2021 {{post.date_posted}}</small>
+</article>
+{%endfor%}
 {%endblock content%}
 
 
