I altered about.html

--- a/my_site/templates/my_site/about.html
+++ b/my_site/templates/my_site/about.html
@@ -7,7 +7,7 @@
     <h2><a class="article-title">Hi, my name is Stas. I`m 23y.o.</a></h2>
             I create this little site on django.
     <p>I don't know many things, so you won't see anything incredible here.</p>
-    <p>This is my first small site that I did not follow the tutorials(googled a little)).</p>
+    <p>This is my first small site that I. I peeped a little in (django_blog)).</p>
     <small class="text-muted"> This post dated 03.12.2021</small>
 </article>
 {%endblock content%}
