--- a/my_site/templates/my_site/base.html
+++ b/my_site/templates/my_site/base.html
@@ -23,7 +23,7 @@
 <header class="site-header">
   <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Django_GG</a>
+      <a class="navbar-brand" href="{%url 'my_site-home'%}">Django_GG</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,7 +35,7 @@
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="#">Login</a>
-          <a class="nav-item nav-link" href="#">Register</a>
+          <a class="nav-item nav-link" href="{%url  'register' %}">Register</a>
         </div>
       </div>
     </div>
@@ -44,6 +44,13 @@
 <main role="main" class="container">
   <div class="row">
     <div class="col-md-8">
+        {% if messages%}
+        {%for message in messages%}
+        <div class = "alert alert-{{message.tags}} ">
+            {{message}}
+        </div>
+        {%endfor%}
+        {%endif%}
       {% block content %}{% endblock %}
     </div>
 
