--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{%extends 'my_site/base.html'%}
+{%block content%}
+<div class="content">
+    <form method="Post">
+        {%csrf_token%}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4"></legend>
+            {{form.as_p}}
+
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Sing Up</button>
+        </div>
+    </form>
+    <div class = "border-top pt-3">
+        <small class = "text-muted">Already Have An Account <a class="ml-2" href="#">Sign In</a>
+        </small>
+    </div>
+</div>
+{%endblock content%}
